Add settings page

--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,31 @@
 {
-    "name": "Picture-in-Picture Shortcut",
-    "version": "1.0",
-    "manifest_version": 3,
-    "permissions": ["activeTab", "scripting", "notifications"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "icons": {
-		"48": "img/icon48.png",
-		"128": "img/icon128.png"
-	},
-    "action": {},
-    "commands": {
-      "_execute_action": {
-        "suggested_key":  "Ctrl+Period",
-        "description": "Open/Close Picture-in-Picture Mode"
-      }
+  "name": "Picture-in-Picture Shortcut",
+  "version": "1.0",
+  "author": "Corbin Davenport",
+  "description": "Switch videos to Picture-in-Picture mode with a keyboard shortcut or toolbar button.",
+  "homepage_url": "https://github.com/corbindavenport/pip-shortcut",
+  "manifest_version": 3,
+  "permissions": [
+    "activeTab",
+    "scripting",
+    "notifications"
+  ],
+  "options_ui": {
+    "page": "settings.html",
+    "open_in_tab": false
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "icons": {
+    "48": "img/icon48.png",
+    "128": "img/icon128.png"
+  },
+  "action": {},
+  "commands": {
+    "_execute_action": {
+      "suggested_key": "Ctrl+Period",
+      "description": "Open/Close Picture-in-Picture Mode"
     }
   }
+}
